# ST-Delegation-of-authority

./: .authority-release.json  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  core-artifacts.yml  version-bump.yml
crates/authority-core/: Cargo.toml
crates/authority-core/src/: constants.rs  core_types.rs  db.rs  error.rs  http_fetch.rs  main.rs  pagination.rs  runtime_state.rs  sql.rs  sql_types.rs  storage_blob.rs  trivium.rs  trivium_types.rs
docs/server/: README.md  admin-import-export.md  ai-integration-guide.md  architecture.md  capabilities-and-isolation.md  core-runtime.md  http-api.md  install-update-release.md  performance-benchmarks.md  st-manager-control-plan.md
managed/core/android-arm64/: authority-core.json
managed/core/linux-arm64/: authority-core.json
managed/core/linux-x64-musl/: authority-core.json
managed/sdk-extension/: api.js  api.js.map  client.js  client.js.map  dom.js  dom.js.map  index.js  index.js.map  manifest.json  permission-dialog.html  permission-prompt.js  permission-prompt.js.map  sdk.js  sdk.js.map  security-center.html  security-center.js  security-center.js.map  style.css  version.js  version.js.map
runtime/: index.cjs  index.cjs.map
scripts/: benchmark-core.mjs  benchmark-scale.mjs  build-core.mjs  copy-managed-core.mjs  copy-static.mjs  installable.mjs  link-dev.mjs  unlink-dev.mjs  versioning.mjs
stubs/: globals.d.ts  script.js.d.ts
stubs/scripts/: extensions.js.d.ts  popup.js.d.ts
(+25 files in other folders)
