[package]
name = "authority-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["formatting"] }
ureq = "2.12.1"
url = "2.5.4"
