[package]
name = "authority-core"
version = "1.0.8"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22.1"
half = { version = "2.7.1", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "limit"] }
triviumdb = { git = "https://github.com/YoKONCy/TriviumDB", rev = "ec73d994823dcb74af329fda0d3f354a6fd8f3d8" }
ureq = "2.12.1"
url = "2.5.4"
